# eo-tools

./: .gitignore  AGENTS.md  DEPLOYMENT.md  DESIGN.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
kernel/: README.md  pyproject.toml
kernel/src/geosprite/eo/tools/: __init__.py  context.py  discovery.py  registry.py  tool.py
libs/io/: README.md  pyproject.toml
libs/io/src/geosprite/eo/io/: __init__.py  coords.py  uri.py  vector.py
libs/io/src/geosprite/eo/io/raster/: __init__.py  dataset.py  processing.py  reader.py  window.py  writer.py
libs/stac/: README.md  pyproject.toml
libs/stac/src/geosprite/eo/stac/: __init__.py  assets.py  builder.py  collections.py  items.py  stac.py
runtime/: README.md  pyproject.toml
runtime/src/geosprite/eo/tools/runtime/adapters/: cli.py  mcp.py  rest.py
runtime/src/geosprite/eo/tools/runtime/core/: __init__.py  context.py  execution.py
runtime/test/: test_cli.py  test_context.py  test_rest.py
tools/catalog/: README.md  pyproject.toml
tools/catalog/src/geosprite/eo/tools/catalog/: __init__.py  asset_names.py  bounds.py  common.py  publish_collection.py  publish_item.py  registry.py  search.py  search_match.py  search_msi.py  search_sar.py  spatial_systems.py  spatial_tiles.py  stac_api.py
tools/catalog/src/geosprite/eo/tools/catalog/grs/: __init__.py  bounds.py  get_bounds.py  get_systems.py  get_tiles.py  grid.py  wgrs.py
tools/catalog/src/geosprite/eo/tools/catalog/grs/core/: wgrs.py
tools/catalog/src/geosprite/eo/tools/catalog/grs/core/wrs2/: dao.py
tools/catalog/src/geosprite/eo/tools/catalog/grs/mgrs/: dao.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/: __init__.py  client.py  collection.py  item.py  match.py  provider.py  query.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/providers/aws/: __init__.py  landsat.py  sentinel1.py  sentinel2.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/providers/pc/: __init__.py  modis.py  sentinel1.py  sentinel2.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/publish/: publish_collection.py  publish_item.py  search.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/publish/core/: stac_api.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/search/: get_collection_assets.py  search_match.py  search_msi.py  search_sar.py
tools/catalog/src/geosprite/eo/tools/catalog/stac/search/core/: collection.py  match.py  query.py
tools/eo-tools-catalog/: README.md  pyproject.toml
tools/eo-tools-catalog/deploy/docker/: Dockerfile
tools/eo-tools-catalog/deploy/k8s/: eo-tools-catalog.yaml
tools/eo-tools-catalog/deploy/scripts/: deploy-catalog-remote.sh  deploy-catalog.ps1
tools/eo-tools-catalog/deploy/stac/: .env.example  README.md
tools/eo-tools-catalog/docs/: API_TEST_README.md  TESTS_SUMMARY.md  TEST_GUIDE.md  TEST_INDEX.md
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/: __init__.py  registry.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/grs/: get_bounds.py  get_systems.py  get_tiles.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/grs/core/: __init__.py  grid.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/publish/: collection.py  item.py  publish_collection.py  publish_item.py  search.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/search/: __init__.py  asset_names.py  common.py  get_collection_assets.py  match.py  search_msi.py  search_sar.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/stac/search/: common.py  match.py  search_sar.py
tools/eo-tools-catalog/src/geosprite/eo/tools/catalog/stac/search/core/: item.py  (+1 more)
tools/eo-tools-catalog/test/: Makefile  conftest.py  pytest.ini  test_catalog_api.py  test_catalog_api_pytest.py  test_catalog_api_simple.py  test_catalog_openapi_examples.py  test_requirements.txt
tools/eo-tools-raster/: README.md  pyproject.toml
tools/eo-tools-raster/deploy/: README.md
tools/eo-tools-raster/deploy/docker/: Dockerfile  docker-compose.yaml  store.raster.local.json
tools/eo-tools-raster/deploy/k8s/: eo-tools-raster.yaml
tools/eo-tools-raster/deploy/scripts/: deploy-raster-remote.sh  deploy-raster.ps1
tools/eo-tools-raster/src/geosprite/eo/tools/raster/: __init__.py  common.py  composition.py  info.py  localization.py  models.py  mosaic.py  outputs.py  stack.py
tools/eo-tools-raster/src/geosprite/eo/tools/raster/composite/: accum.py  common.py  median.py  min.py  occur.py
tools/eo-tools-raster/src/geosprite/eo/tools/raster/crop/: core.py  intersection.py  item_to_extent.py  single.py  submit_to_intersection.py  to_extent.py  to_intersection.py
tools/eo-tools-raster/src/geosprite/eo/tools/raster/mosaic/: core.py  mosaic.py
tools/eo-tools-raster/src/geosprite/eo/tools/raster/stack/: core.py  rgb.py  stack.py
tools/eo-tools-raster/test/: test_raster_tools.py
tools/eo-tools-snap/: README.md  pyproject.toml
tools/eo-tools-snap/deploy/: README.md  docker-compose.yml  store.snap.local.json
tools/eo-tools-snap/deploy/docker/: Dockerfile
tools/eo-tools-snap/deploy/k8s/: eo-tools-snap.yaml
tools/eo-tools-snap/deploy/scripts/: deploy-snap-local.ps1  deploy-snap-remote.sh  deploy-snap.ps1
tools/eo-tools-snap/src/geosprite/eo/tools/snap/: __init__.py  registry.py  sentinel1.py
tools/eo-tools-snap/src/geosprite/eo/tools/snap/core/: sentinel1.py  store.py
tools/eo-tools-snap/src/geosprite/eo/tools/snap/core/preprocessing/: sentinel1.py
tools/eo-tools-snap/src/geosprite/eo/tools/snap/sentinel1/: preprocessing.py  snap.py
tools/raster/: README.md  pyproject.toml
tools/raster/src/geosprite/eo/tools/raster/: __init__.py  common.py  info.py  outputs.py  registry.py
tools/raster/src/geosprite/eo/tools/raster/composite/: accum.py  common.py  max.py  median.py  min.py  occur.py
tools/raster/src/geosprite/eo/tools/raster/crop/: core.py  intersection.py  item_to_extent.py  single.py  submit_to_intersection.py  to_extent.py  to_intersection.py
tools/raster/src/geosprite/eo/tools/raster/mosaic/: core.py  geometry.py  json.py  mosaic.py
tools/raster/src/geosprite/eo/tools/raster/stack/: core.py  rgb.py  stack.py
(+38 files in other folders)
