[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-io"
version = "0.1.0"
description = "I/O layer for Earth Observation Tools: URI resolution, storage clients, GDAL/COG/zarr helpers, ingest."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Heavy I/O deps live here so eo-tools and API contracts stay light.
dependencies = [
    "fsspec>=2024.6",
    "aiohttp>=3.9",        # async HTTP backend for fsspec
]

[project.optional-dependencies]
gdal  = ["GDAL", "numpy>=1.20", "shapely"]
s3    = ["s3fs>=2024.6"]
gcs   = ["gcsfs>=2024.6"]
azure = ["adlfs>=2024.4"]
all   = ["GDAL", "numpy>=1.20", "shapely", "s3fs>=2024.6", "gcsfs>=2024.6", "adlfs>=2024.4"]

[project.urls]
Organization = "https://github.com/geosprite"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]
