[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-catalog"
version = "0.1.0"
description = "Catalog, STAC search and spatial grid tools for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-tools-core",
    "eo-catalog-core",
    "eo-catalog-grs",
    "eo-catalog-stac",
]

[project.urls]
Organization = "https://github.com/geosprite"

[project.entry-points."geosprite.eo.tools"]
catalog = "geosprite.eo.tools.catalog"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]

[tool.uv.sources]
eo-tools-core = { workspace = true }
eo-catalog-core = { path = "../../eo-catalog/core", editable = true }
eo-catalog-stac = { path = "../../eo-catalog/stac", editable = true }
eo-catalog-grs = { path = "../../eo-catalog/grs", editable = true }
