[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-raster"
version = "0.1.0"
description = "Raster crop, mosaic, stack and composite tools for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-tools-core",
    "eo-io[gdal]",
    "eo-catalog-core",
    "eo-store",
    "mercantile",
    "pyproj",
]

[project.urls]
Organization = "https://github.com/geosprite"

[project.entry-points."geosprite.eo.tools"]
raster = "geosprite.eo.tools.raster"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]

[tool.uv.sources]
eo-tools-core = { workspace = true }
eo-io = { workspace = true }
eo-store = { workspace = true }
eo-catalog-core = { workspace = true }
