[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-raster"
version = "0.1.0"
description = "Raster tool registration and orchestration for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-raster",
    "eo-store",
    "eo-tools-core",
]

[project.urls]
Organization = "https://github.com/geosprite"

[project.entry-points."geosprite.eo.tools"]
raster = "geosprite.eo.tools.raster"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]

[tool.uv.sources]
eo-raster = { workspace = true }
eo-store = { workspace = true }
eo-tools-core = { workspace = true }
