[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-snap"
version = "0.1.0"
description = "SNAP and Sentinel-1 preprocessing tools for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-tools-core>=0.1.0",
    "eo-catalog-stac>=0.1.0",
    "eo-store",
    "aria2p[tui]",
    "GDAL",
]

[project.urls]
Organization = "https://github.com/geosprite/eo-tools"

[project.entry-points."geosprite.eo.tools"]
snap = "geosprite.eo.tools.snap"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]

[tool.uv.sources]
eo-tools-core = { workspace = true }
eo-store = { workspace = true }
