[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-snap"
version = "0.1.0"
description = "SNAP and Sentinel-1 preprocessing tools for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-io",
    "eo-raster",
    "eo-store",
    "eo-tools-core",
]

[project.urls]
Organization = "https://github.com/geosprite"

[project.entry-points."geosprite.eo.tools"]
snap = "geosprite.eo.tools.snap"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]

[tool.uv.sources]
eo-io = { workspace = true }
eo-raster = { workspace = true }
eo-store = { workspace = true }
eo-tools-core = { workspace = true }
