[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-tools-raster"
version = "0.1.0"
description = "Raster crop, mosaic, stack and composite tools for Earth Observation Tools."
authors = [{ name = "Jia Song", email = "geosprite2020@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "eo-tools-core>=0.1.0",
    "eo-io[gdal]>=0.1.0",
    "eo-jobs",
    "eo-stac>=0.1.0",
    "eo-store",
    "mercantile",
    "pyproj",
]

[project.urls]
Organization = "https://github.com/geosprite"

[tool.hatch.build.targets.wheel]
packages = ["src/geosprite"]
